// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory predicts vault addresses 1`] = `5118`;

exports[`EthVaultFactory predicts vault addresses 2`] = `5106`;

exports[`EthVaultFactory private vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 645416,
}
`;

exports[`EthVaultFactory private vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 493102,
}
`;

exports[`EthVaultFactory public vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 597245,
}
`;

exports[`EthVaultFactory public vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 444931,
}
`;
